# biodivine-lib-bdd

./: .gitignore  .releasenotes.yml  .travis.yml  Cargo.toml  DEVELOPER.md  LICENSE  Makefile.toml  README.md  docs-head.html
.githooks/: README.txt  pre-commit
.github/workflows/: build.yml  release.yml
benches/: dnf.rs  itgr.rs
buddy/: Makefile  README  buddy_bn_static_param_constraint.cpp  buddy_ripple_carry_adder.cpp
cudd/: Makefile  README  cudd_bn_static_param_constraint.cpp  cudd_ripple_carry_adder.cpp
examples/: bench_restrict.rs
res/test_expressions/: 001.bnet  002.bnet  003.bnet  004.bnet  005.bnet  006.bnet  007.bnet  008.bnet  009.bnet  010.bnet  011.bnet  012.bnet  013.bnet  014.bnet  015.bnet  016.bnet  017.bnet  018.bnet  019.bnet  020.bnet  021.bnet  022.bnet  023.bnet  024.bnet  025.bnet  026.bnet  027.bnet  028.bnet  029.bnet  030.bnet  031.bnet  032.bnet  033.bnet  034.bnet  035.bnet  036.bnet  037.bnet  038.bnet  039.bnet  040.bnet  (+200 more)
res/test_results/: bdd_to_dot.dot  bdd_to_string.txt
src/: _impl_bdd_cube.rs  _impl_bdd_node.rs  _impl_bdd_partial_valuation.rs  _impl_bdd_path_iterator.rs  _impl_bdd_pointer.rs  _impl_bdd_satisfying_valuations.rs  _impl_bdd_valuation.rs  _impl_bdd_variable.rs  _impl_bdd_variable_set.rs  _impl_bdd_variable_set_2.rs  _impl_bdd_variable_set_builder.rs  _impl_iterator_valuations_of_clause.rs  _macro_bdd.rs  _mutable_bdd.rs  _test_util.rs  bdd_dot_printer.rs  bdd_expression_parser.rs  bdd_macro.rs  bdd_node.rs  bdd_pointer.rs  bdd_serialisation.rs  bdd_universe_impl.rs  bdd_valuation.rs  bdd_valuation_impl.rs  bdd_worker_impl.rs  impl_bdd_boolean_ops.rs  impl_bdd_node.rs  impl_bdd_pointer.rs  impl_bdd_serialisation.rs  impl_bdd_util.rs  impl_bdd_valuation.rs  impl_bdd_variable.rs  impl_bdd_variable_set.rs  lib.rs  macro_bdd.rs  op_function.rs  random_sampling.rs  test_bdd_logic_basic.rs  test_bdd_logic_fuzzing.rs  test_util.rs
src/_impl_bdd/: _impl_approximation.rs  _impl_boolean_ops.rs  _impl_cnf.rs  _impl_cube_ops.rs  _impl_dnf.rs  _impl_export_dot.rs  _impl_nested_ops.rs  _impl_relation_ops.rs  _impl_serialisation.rs  _impl_sort.rs  _impl_ternary_ops.rs  _impl_util.rs  _impl_valuation_utils.rs  dnf.rs  mod.rs
src/_test_bdd/: _test_bdd_logic_basic.rs  _test_bdd_logic_fuzzing.rs  _test_bdd_ops_with_limit.rs  _test_bdd_relation_ops.rs  mod.rs
src/bdd_universe_impl/: bdd_macro.rs  bdd_universe_builder_impl.rs  mod.rs  tests_bdd_universe_basic_logic.rs  tests_bdd_universe_fuzzing.rs
src/benchmarks/: bex_bn_static_param_constraint.rs  bex_ripple_carry_adder.rs  bn_static_param_constraint.rs  mod.rs  ripple_carry_adder.rs
src/boolean_expression/: _impl_boolean_expression.rs  _impl_parser.rs  impl_boolean_expression.rs  impl_parser.rs  mod.rs
src/tutorial/: mod.rs  p01_bdd_intro.rs  p02_bdd_universe.rs  p02_bdd_variable_set.rs  p03_bdd_manipulation.rs  p04_bdd_serialisation.rs  p05_bdd_valuations.rs  p06_bdd_advanced_operations.rs
src/v2/: bdd_node_impl.rs  bdd_ops.rs  bdd_pointer_impl.rs  bdd_serialisation.rs  bdd_util.rs  bdd_variable_impl.rs  bdd_variable_set_builder_impl.rs  bdd_variable_set_impl.rs  impl_bdd_export_dot.rs  impl_bdd_variable_set.rs  impl_bdd_variable_set_builder.rs  mod.rs  test_bdd_logic_basic.rs  test_util.rs
src/v2/boolean_expression/: impl_boolean_expression.rs  mod.rs
test_results/: bdd_to_dot.dot  bdd_to_dot_pruned.dot
