[package]
name = "biodivine-lib-bdd"
version = "0.2.1"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
edition = "2018"
description = "A simple thread-safe implementation of basic binary decision diagrams."
homepage = "https://github.com/sybila/biodivine-lib-bdd"
repository = "https://github.com/sybila/biodivine-lib-bdd"
readme = "README.md"
keywords = ["bdd", "boolean-expression", "symbolic"]
categories = ["data-structures", "mathematics", "science"]
license = "MIT"

[badges]
travis-ci = { repository = "sybila/biodivine-lib-bdd" }
codecov = { repository = "sybila/biodivine-lib-bdd" }
maintenance = { status = "actively-developed" }

[dependencies]
fxhash = "0.2.1"

[dev-dependencies]
rand = "0.7"

[features]
# Use this config flag to enable checks or validation that should not be necessary
# (for example, the check can fail only if function contract is violated).
# In production/benchmark releases, this feature should be disabled to enable best
# performance. Avoid introducing dead code when shields_up is on, to avoid
# dead code coverage issues.
shields_up = []

# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./res/docs-head.html"]