[package]
name = "biodivine-lib-bdd"
version = "0.6.1"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "A simple thread-safe implementation of basic binary decision diagrams."
homepage = "https://github.com/sybila/biodivine-lib-bdd"
repository = "https://github.com/sybila/biodivine-lib-bdd"
readme = "README.md"
keywords = ["bdd", "boolean-expression", "symbolic"]
categories = ["data-structures", "mathematics", "science"]
license = "MIT"
# Don't publish the test data with the package.
exclude = [ "res/test_expressions/*", "res/test_results/*" ]

[badges]
travis-ci = { repository = "sybila/biodivine-lib-bdd" }
codecov = { repository = "sybila/biodivine-lib-bdd" }
maintenance = { status = "actively-developed" }

[dependencies]
fxhash = "0.2.1"
rand = "0.8" # TODO: Can't update `rand` until supported by `num-bigint`.
num-bigint = {  version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
num-rational = "0.4.2"
serde = { version = "1.0", optional = true, features = ["derive"] }

# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./res/docs-head.html"]

[features]
default = []
serde   = ["dep:serde"]